[package]
name = "cyclomatic-complexity"
version = "0.1.0"
authors = ["Satyarth Agrahari <satylogin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33.3"
rstest = "0.7.0"
syn = "1.0.72"
proc-macro2 = "1.0.26"